# agi

./: .gitignore  README.md  README.zh.md  agi.yaml.example  pyproject.toml
skills/menu/: SKILL.md
skills/summarize/: SKILL.md
skills/summarize/scripts/: summarize.py
src/agi/: app.py  cli.py  config.py  types.py
src/agi/agent/: compaction.py  context.py  loop.py  memory_flush.py  model_fallback.py  permissions.py  sessions.py  subagents.py  tracer.py
src/agi/browser/: manager.py
src/agi/channels/: cli.py  discord.py  dispatcher.py  gateway.py  openai_api.py  telegram.py
src/agi/cron/: cron_tool.py  scheduler.py
src/agi/hooks/: manager.py
src/agi/memory/: embeddings.py  file_sync.py  hybrid.py  mmr.py  query.py  rerank.py  store.py
src/agi/providers/: tts.py  whisper.py
src/agi/queue/: queue.py
src/agi/storage/: db.py
src/agi/tools/: browser_tool.py  computer.py  fs.py  mcp.py  memory_tool.py  registry.py  say.py  shell.py  skills.py  subagents_tool.py  todo.py  web.py
